# chimera-spawn

./: .gitignore  README.md  TODO.txt  pyproject.toml
configs/: config.yaml
configs/cloud-init/: base.yaml  ubuntu.yaml
configs/images/: debian.yaml  rocky.yaml  ubuntu.yaml
configs/nodes/: dev-node1.yaml  test-node1.yaml
configs/profiles/: isolated.yaml  non_isolated.yaml  privileged.yaml
src/chimera/: __init__.py  __main__.py
src/chimera/agent/: __init__.py  __main__.py  config.py  engine.py  ipc.py  main.py  server.py
src/chimera/cli/: __init__.py  __main__.py  client.py  commands.py  main.py
src/chimera/models/: __init__.py  config.py  container.py  image.py  profile.py
src/chimera/providers/: __init__.py  base.py  cloudinit.py  container.py  image.py  profile.py  registry.py
src/chimera/utils/: __init__.py  logging.py  systemd.py  templates.py
tests/: __init__.py
tests/test_agent/: test_config.py  test_engine.py  test_ipc.py  test_server.py
tests/test_cli/: test_commands.py  test_main.py
tests/test_models/: test_config.py  test_container.py  test_image.py
tests/test_providers/: test_container.py  test_registry.py
